# Ursus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  map_setup.sql  pyproject.toml  sys_setup.sql  ursus.service  ursus_setup.sql  ursusctrl.py  ursusd.py
database/URSUS/: URSUS.ADMIN_UI.PAK  URSUS.ADMIN_UI.PLS  URSUS.CONTROL_UI.PAK  URSUS.CONTROL_UI.PLS  URSUS.DDL_EVENT_TRIGGER.TRI  URSUS.DDL_EVENT_TYPE.TYP  URSUS.MAPS.TAB  URSUS.PROCESS_DDL_EVENTS.PAK  URSUS.PROCESS_DDL_EVENTS.PLS  URSUS.SCHEMA_PARAMS.TAB  URSUS.SCHEMA_PARAMS_PK.IDX  URSUS.SYS_C0078318.IDX  URSUS.TEST.TAB
database/URSUS/changes/: URSUS.SCHEMA_PARAMS.TAB  URSUS.TEST_TABLE.TAB
ursus/: __init__.py  buildsystems.py  commit_scheduler.py  config.py  git.py  liquibase.py  oracle.py
ursus/scripts/: ursusctrl.py  ursusd.py
