[tool.poetry]
name = "ursus"
version = "0.0.1"
description = "Keep track of code changes in Oracle databases."
authors = ["Yngvi Thor Sigurjonsson <blitzkopf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
oracledb = "^2.5.1"
configparser = "^7.1.0"
pyyaml = "^6.0.2"
lxml = "^5.3.1"

[tool.poetry.scripts]
ursusd= "ursus.scripts.ursusd:main"
ursusctrl= "ursus.scripts.ursusctrl:main"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
]

[tool.ruff.lint.pydocstyle]
convention = "google"
